--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
 </head>
 <body>
   <div class="container">
-    <h1>Mr. ROBORoger's Neighborhood</h1>
+    <h1>Mr. ROBO Roger's Neighborhood</h1>
     <img src="img/robo.jpg" alt="A robot Mr. Rogers">
-    <div>
+    <br>
+    <div class="form">
       <form id="formOne">
         <div class="form-group">
-          <label for="person1">A name</label>
+          <label for="person1">Enter a Number Below to See Mr. ROBO Rogers Response!</label>
           <input id="person1" class="form-control" type="text">
         </div>
-        <button type="submit" class="btn">Show me the story!</button>
+        <button type="submit" class="btn-light">Submit Your Number</button>
       </form>
     </div>
+    <div id="results">
+      <h3>Mr. ROBO Rogers Says!</h3>
+      <p>
+        
+      </p>
+    </div>
   </div>
-  <div id="story">
-    <h1>A fantastical adventure</h1>
-    <p>
-      One day, <span class="person1"></span> and <span class="person2"></span> were walking through the woods, when suddenly a giant <span class="animal"></span> appeared. "<span class="exclamation"></span>", <span class="person1"></span> cried. The two of them <span class="verb"></span> as quickly possible, and when they were safe, <span class="person1"></span> and <span class="person2"></span> gave each other a giant <span class="noun"></span>.
-    </p>
-  </div>
-</div>
 </body>
 </html>
