add basic styling to front end.

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
     <div class="form">
       <form id="formOne">
         <div class="form-group">
-          <label for="person1">Enter a Number Below to See Mr. ROBO Rogers Response!</label>
-          <input id="person1" class="form-control" type="text">
+          <label for="formNumber"><strong>Enter a Number Below to See Mr. ROBO Rogers Response!</strong></label>
+          <input id="formNumber" class="form-control" type="text">
         </div>
         <button type="submit" class="btn-light">Submit Your Number</button>
       </form>
     </div>
+    <br>
     <div id="results">
       <h3>Mr. ROBO Rogers Says!</h3>
       <p>
