add function to split inputted numbers to string.

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mr. Roger's Neighborhood</title>
+  <title>Mr. ROBO Roger's Neighborhood</title>
 </head>
 <body>
   <div class="container">
-    <h1>Mr. ROBO Roger's Neighborhood</h1>
-    <img src="img/robo.jpg" alt="A robot Mr. Rogers">
+    <h1>Welcome to Mr. ROBO Roger's Neighborhood</h1>
+    <br>
+    <center><img src="img/robo.jpg" alt="A robot Mr. Rogers"></center>
     <br>
     <div class="form">
       <form id="formOne">
