BUGFIX - hide and show results function.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <form id="formOne">
         <div class="form-group">
           <label for="formNumber"><strong>Enter a Number Below to See Mr. ROBO Rogers Response!</strong></label>
-          <input id="formNumber" class="form-control" type="text">
+          <input id="formNumber" class="form-control" type="number">
         </div>
         <button type="submit" class="btn-light">Submit Your Number</button>
       </form>
