--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <br>
     <div id="results">
-      <h3>Mr. ROBO Rogers Says!</h3>
+      <h3>Mr. ROBO Rogers Says:</h3>
       <p></p>
       <center><img src="img/says.jpg"></center>
     </div>
