--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <br>
     <div id="results">
       <h3>Mr. ROBO Rogers Says:</h3>
-      <p></p>
+      <p><span id="final"></span></p>
       <center><img src="img/says.jpg"></center>
     </div>
   </div>
